<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StuReSy</string>
    <string name="action_settings">Settings</string>

    <!-- Activity names -->
    <string name="title_activity_planning">Frageneditor</string>
    <string name="title_activity_presentation">Abstimmung</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_evaluation">Abstimmungsanalyse</string>
    <string name="title_activity_html_editor">Bearbeiten</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_settings">Einstellungen</string>

    <!-- Voting -->
    <string name="answers">Antworten</string>
    <string name="votes">Stimmen</string>
    <string name="lecture_panel_text">Vorlesungs-ID für Onlineabstimmungen:</string>
    <string name="time">Zeit:</string>
    <string name="no_file_name">Es wurde kein Name angegeben. Speichervorgang abgebrochen.</string>
    <string name="votings">Abstimmungen</string>
    <string name="QR_Code">QR Code</string>
    <string name="reset_voting_toast">Die Abstimmung wurde für die aktuelle Frage zurückgesetzt</string>
    <string name="voting_started_toast">Die Abstimmung wurde gestartet</string>
    <string name="voting_finished_toast">Die Abstimmung wurde beendet</string>
    <string name="voting_start_voting_tip">Startet oder stoppt die derzeitige Abstimmung</string>
    <string name="voting_barcode_tip">Zeigt einen QR-Code, der die URL für diese Abstimmung beinhaltet</string>
    <string name="voting_reset_tip">Löscht alle bisherigen Stimmen zu dieser Frage</string>
    <string name="voting_show_results_tip">Zeigt oder verbirgt ein Balkendiagramm</string>
    <string name="voting_show_correct_tip">Zeigt oder verbirgt die richtige Antwort</string>

    <!-- Question Generator -->
    <string name="name_of_question_set">Name des Fragensatzes</string>
    <string name="example_title">Mustertitel</string>
    <string name="questions_folders">Fragesätze</string>
    <string name="question_hint">Musterfrage</string>
    <string name="no_question_text">Es ist keine Frage ausgewählt.\n \nWählen sie eine Frage aus der Liste aus. \n\nFalls Sie noch keine Fragen angelegt haben, legen Sie eine neue Frage an, indem Sie den Knopf in der unteren linken Ecke betätigen.\n \nAlternativ können Sie auch bereits gespeicherte StuReSy Fragesätze laden. \nEs besteht ebenfalls die Möglichkeit Fragesätze im QTI-Format zu laden.</string>
    <string name="title_question_selection">Fragetyp wählen</string>
    <string name="single_choice">Einfachauswahl (Single Choice)</string>
    <string name="multiple_choice">Mehrfachauswahl (Multiple Choice)</string>
    <string name="text_choice">Text Frage</string>
    <string name="add_question">Frage hinzufügen</string>
    <string name="duration_in_seconds">Dauer in Sekunden (leer=unbegrenzt): </string>
    <string name="questions">Fragen</string>
    <string name="deselect_correct_answer">Korrekte Antwort abwählen</string>
    <string name="new_answer">Neue Antwort</string>
    <string name="add_answer">Antwort hinzufügen</string>
    <string name="up">Hoch</string>
    <string name="down">Runter</string>
    <string name="reset">Zurücksetzen</string>
    <string name="question_generator_answer">Antwort:</string>
    <string name="tolerance">Fehlertoleranz:</string>
    <string name="ignore_case">Groß/KleinSchreibung ignorieren</string>
    <string name="ignore_white_space">Leerzeichen ignorieren</string>
    <string name="answer">Antwort</string>
    <string name="question">Frage:</string>
    <string name="save">Speichern</string>
    <string name="new_question">Neue Frage</string>
    <string name="enter_answer">Antwort eingeben</string>
    <string name="question_save_successful">Das Frageset wurde erfolgreich gespeichert</string>
    <string name="error_saving_questions">Fehler beim Speichern des Fragesets</string>
    <string name="error_no_questionset_name">Bitte geben Sie einen Namen für den Fragensatz an und/oder fügen Sie weitere Fragen hinzu!</string>
    <string name="error_file_already_exist">Der angegebene Name des Fragesets konnte nicht verwendet werden. Die Fragen wurden unter dem bisherigen Namen gespeichert.</string>
    <string name="deleted">Entfernt</string>
    <string name="tap_toundo">Rückgängig</string>
    <string name="error_parsing_qti" formatted="false">Es konnten nicht alle QTI-Fragen übernommen werden. %d von %d QTI-Fragen wurden übernommen. Unterstütze Fragetypen sind Singlechoice und Multiplechoice.</string>

    <!-- Voting Analysis -->
    <string name="error_csv_message">Die abgegebenen Stimmen konnten nicht in eine csv Datei gespeichert werden.</string>
    <string name="error_reading_votes_from_file">Die Abstimmungsergebnisse konnten nicht geladen werden.
        Grund hier für sind Fehler in der XML-Datei.</string>
    <string name="csv_export">CSV Export</string>
    <string name="open_results">Ergebnisse laden</string>
    <string name="number_of_votes">Anzahl an Stimmen</string>
    <string name="votes_in_percent">Stimmen in %</string>
    <string name="votes_over_time">Stimmen pro Zeit</string>
    <string name="time_in_seconds">Zeit in Sekunden</string>
    <string name="mean">Mittelwert: %f Sekunden</string>
    <string name="median">Median: %f Sekunden</string>
    <string name="others">Andere</string>
    <string name="no_votes_for_question">Keine Abstimmungsdaten für diese Frage vorhanden</string>

    <!-- Dialog and error handling -->
    <string name="title_open_qti">QTI-Fragesatz laden</string>
    <string name="title_load_votes">Ergebnisse laden</string>
    <string name="error">Fehler</string>
    <string name="dialog_import_title">Auswahl</string>
    <string name="Abort">Abbrechen</string>
    <string name="OK">OK</string>
    <string name="error_no_lecture_id">Keine Vorlesungs-ID</string>
    <string name="no_lecture_id_message">Es wurde keine gültige Vorlesungs_ID eingetragen. Eine Online-Abstimmung ist nur mit Hilfe einer gültigen Vorlesungs-ID und einem StuReSy Server möglich. Bitte tragen Sie die ID in den Einstellungen ein.</string>
    <string name="error_load_questionset">Mindestens ein Frageset konnte nicht geladen werden.</string>

    <!-- Settings activity -->
    <string name="password">Passwort:</string>
    <string name="token_redemption_success">Auslesen des Tokens war erfolgreich</string>
    <string name="error_tokenredemption">Fehler beim Auslesen des Tokens.</string>
    <string name="error_no_valid_host_provided">Es wurde keine gültige URL angegeben</string>
    <string name="error_no_lecture_id_provided">Es wurde keine ID angegeben</string>
    <string name="error_no_password_provided">Es wurde kein Password angegeben</string>
    <string name="host_connection_success">Verbinden mit dem Server war erfolgreich</string>
    <string name="error_host_connection_failed">Konnte keine Verindung mit dem Server herstellen</string>
    <string name="saving_lecture_id_success">Speichern der Lecture ID war erfolgreich.</string>
    <string name="error_reading_file">Die Datei konnte nicht gelesen werden.</string>
    <string name="label_websettings">Internet Einstellungen</string>
    <string name="server_address">Serveradresse</string>
    <string name="check_server_availability">Server auf Erreichbarkeit prüfen</string>
    <string name="server_check_intervall">Abfragefrequenz</string>
    <string name="milli_seconds">Millisekunden</string>
    <string name="lecture_id">Vorlesungs-ID</string>
    <string name="token_label">Token:</string>
    <string name="redeem">Einlösen</string>
    <string name="save_and_close">Speichern und schließen</string>
    <string name="token_header">Vorlesungs-ID und Passwort via Token eintragen</string>
    <string name="default_address">http://relay.php</string>
    <string name="host_hint">http://www.example.com/relay.php</string>
    <string name="default_intervall">5000</string>

    <!-- Menu -->
    <string name="qti_import">QTI importieren</string>
    <string name="load_question_set">Fragesatz laden</string>

</resources>
